# gerenciador-de-tarefas-modelo-kanban

Haskell/Menu/: Main.hs
Haskell/Model/: Area.hs  Tarefa.hs  Usuario.hs  Workspace.hs
Haskell/src/: Kanban.cabal
Haskell/src/Controller/: TarefaController.hs  UsuarioController.hs  WorkspaceController.hs
Haskell/src/LocalDB/: ConnectionDB.hs  UsuarioDB.hs  WorkspaceDB.hs
Haskell/src/Menu/: Main.hs  Sistema.hs
Haskell/src/Model/: Area.hs  Tarefa.hs  Usuario.hs  Workspace.hs
Haskell/src/Util/: Utils.hs
Haskell/src/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Prolog/: README.md
Prolog/src/: interface.pl  main.pl  tarefasDB.pl  usuarioDB.pl  util.pl  workspace.pl  workspaceDB.pl
Prolog/src/dados/: tarefas.csv  usuario.csv  workspace.csv
Util/: Utils.hs
