cabal-version:      2.4
name:               Kanban
version:            0.1.0.0

-- Gerenciador de tarefas Kanban
-- synopsis:

-- Aplicacao para acompanhamento de evolucao de um projeto segundo o modelo Kanban
-- description:

-- 
-- bug-reports:

-- MIT
-- license:
author:             grupo14-plp-cc-ufcg-221

-- A copyright notice.
-- copyright:
-- category:

executable Kanban
    main-is:          Menu/Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
                --base ^>=4.16.4.0,
                  base ^>= 4.14.2.0,
                  postgresql-simple ^>=0.6.4,
                  bytestring ^>=0.11.3.1
    hs-source-dirs:  .
    other-modules:   LocalDB.ConnectionDB, Util.Utils, Model.Usuario, Model.Workspace, Model.Tarefa, Model.Area, LocalDB.UsuarioDB, LocalDB.WorkspaceDB, Controller.UsuarioController, Controller.WorkspaceController, Menu.Sistema
    default-language: Haskell2010
